fix permanent scroll overflow on calc body

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
     overflow: auto;
     width: 100%;
     height: 100%;
+    max-height: 800px;
     max-width: 506px;
     background-color: grey;
     border: solid;
@@ -42,15 +43,18 @@
 	border-top: none;
 }
 
+#display_top {
+	border-bottom: none;
+}
+
 #display_top span, #display_bottom span {
 	margin-right: 10px;
 }
 
-#tmp_container {
+#pad_container {
 	display: flex;
     background-color: darkgrey;
     width: 100%;
-    height: 52%;
     margin: 0 50px 50px 50px;
     border: solid;
 }
